--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -16,14 +16,14 @@
           <div class="image-wrapper" style="background-image: url('assets/gallery/3W7A0257-09-51-16_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/3W7A0257-09-51-16.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">CIGI President Rohinton Medhora on stage at Gateway House India.</div>
+          <div class="caption">CIGI President Rohinton P. Medhora on stage at Gateway House India.</div>
         </div>
 
         <div class="image-container">
           <div class="image-wrapper" style="background-image: url('assets/gallery/2016-08-15-ILRP-Graduate-Student-Conference_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/2016-08-15-ILRP-Graduate-Student-Conference.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">Graduate students and CIGI experts gather at the ILRP Graduate Student Conference to discuss the history and practices of International Law in Canada.</div>
+          <div class="caption">Graduate students and CIGI experts gather at the ILRP Graduate Student Conference to discuss the history and practices of international law in Canada.</div>
         </div>
 
         <div class="image-container">
@@ -37,7 +37,7 @@
           <div class="image-wrapper" style="background-image: url('assets/gallery/2016-09-28-Global-Think-Tank-Summit-106_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/2016-09-28-Global-Think-Tank-Summit-106.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">CIGI President Rohinton Medhora and Minister of Foreign Affairs Stéphane Dion at the 2016 Global Think Tank Summit.</div>
+          <div class="caption">CIGI President Rohinton P. Medhora and former Minister of Foreign Affairs Stéphane Dion at the 2016 Global Think Tank Summit.</div>
         </div>
 
         <div class="image-container">
@@ -65,14 +65,14 @@
           <div class="image-wrapper" style="background-image: url('assets/gallery/2017-03-24-Model-UN_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/2017-03-24-ModelUN.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">A local high school student participates in the Waterloo District School Board Model UN at the CIGI Campus.</div>
+          <div class="caption">A local high school student participates in the Waterloo Region High School Model UN at the CIGI Campus.</div>
         </div>
 
         <div class="image-container">
           <div class="image-wrapper" style="background-image: url('assets/gallery/2017-04-03-Media-Panel-Reporting-the-Refugee-Crisis_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/2017-04-03-Media-Panel-Reporting-the-Refugee-Crisis.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">Global Security & Politics Director Fen Osler Hampson introduces a panel of foreign correspondents and writers covering the global refugee crisis.</div>
+          <div class="caption">Global Security & Politics Program Director Fen Osler Hampson introduces a panel of foreign correspondents and writers covering the global refugee crisis.</div>
         </div>
 
         <div class="image-container">
@@ -100,42 +100,42 @@
           <div class="image-wrapper" style="background-image: url('assets/gallery/T20-Celine-Bak_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/T20-Celine-Bak.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">Senior Fellow and co-chair of the Think Tank 20 (T20) task force on climate policy and finance, Celine Bak addresses the Think 20 Summit in Berlin.</div>
+          <div class="caption">Céline Bak, senior fellow and co-chair of the Think 20 (T20) Task Force on Climate Policy and Finance, addresses the Think 20 Summit in Berlin.</div>
         </div>
 
         <div class="image-container">
           <div class="image-wrapper" style="background-image: url('assets/gallery/CiGi_67I7832_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/CiGi_67I7832.JPG' | relative_url }}"/>
           </div>
-          <div class="caption">Lloyd Axworthy discusses the work of the World Refugee Council with Kofi Annan.</div>
+          <div class="caption">Former Canadian Minister of Foreign Affairs Lloyd Axworthy discusses the work of the World Refugee Council with former UN Secretary-General Kofi Annan.</div>
         </div>
 
         <div class="image-container">
           <div class="image-wrapper" style="background-image: url('assets/gallery/Innovation-in-Context-Oonagh_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/Innovation-in-Context-Oonagh.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">International Law Research Program Director Oonagh Fitzgerald speaks at the Innovation in Context Conference in Montreal.</div>
+          <div class="caption">International Law Research Program Director Oonagh Fitzgerald speaks at the Innovation in Context conference in Montreal.</div>
         </div>
 
         <div class="image-container">
           <div class="image-wrapper" style="background-image: url('assets/gallery/IMG_2742_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/IMG_2742.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">'Reconciling Regulation and Growth' presentation at the 2016 Oliver Wyman Conference.</div>
+          <div class="caption">“Reconciling Regulation and Growth” presentation at the 2016 Oliver Wyman conference.</div>
         </div>
 
         <div class="image-container">
           <div class="image-wrapper" style="background-image: url('assets/gallery/IMG_4019-square_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/IMG_4019-square.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">Research Fellow Alex He speaks in Beijing at the launch of his book The Dragon's Footprints: China in the Global Economic Governance System under the G20 Framework.</div>
+          <div class="caption">Research Fellow Alex He speaks in Beijing at the launch of his book <em>The Dragon's Footprints: China in the Global Economic Governance System under the G20 Framework</em>.</div>
         </div>
 
         <div class="image-container">
           <div class="image-wrapper" style="background-image: url('assets/gallery/Shearer-CIGI_017_pre.jpg')">
             <img class="view" src="{{ '/assets/gallery/Shearer-CIGI_017.jpg' | relative_url }}"/>
           </div>
-          <div class="caption">Former United States Ambassador to Finland Derek Shearer on stage at CIGI during his lecture on the potential impact of the 2016 US election.</div>
+          <div class="caption">Former US Ambassador to Finland Derek Shearer on stage at CIGI during his lecture on the potential impact of the 2016 US election.</div>
         </div>
 
         <div class="image-container">
