--- a/_assets/css/custom/gallery.scss
+++ b/_assets/css/custom/gallery.scss
@@ -11,10 +11,10 @@
     position: relative;
     cursor: pointer;
     flex-basis: 20%;
-    padding: 0.1rem;
     width: 210px;
     height: 140px;
     overflow: hidden;
+    border: solid 0.1rem transparent;
    
     @include media-query($on-laptop){
       height: 100px;
